# travel-agency-system

./: .gitignore  README.md  pyproject.toml
src/travel_agency/admin/: __init__.py  dashboard.py
src/travel_agency/admin/templates/: dashboard.html
src/travel_agency/cli/: main.py
src/travel_agency/core/: __init__.py  landing_page.py
